fix: fix layout bugs

--- a/shelter/assets/sass/blocks/_donation.scss
+++ b/shelter/assets/sass/blocks/_donation.scss
@@ -25,8 +25,8 @@
         margin-top: 20px;
     }
     &__card {
-        padding: 10px 15px;
-        width: 349px;
+        padding: 8px 0 8px 15px;
+        width: 355px;
         height: 43px;
         background: $color-primary;
         border-radius: 9px;
