--- a/shelter/assets/sass/blocks/_footer.scss
+++ b/shelter/assets/sass/blocks/_footer.scss
@@ -18,12 +18,9 @@
         flex-direction: column;
         justify-content: space-between;
         height: 234px;
-    }
-    &__contacts {
-        width: 282px;        
+        width: 302px;
     }
     &__locations {
-        width: 302px;
         .footer__item {
             display: flex;
             align-items: center;
